# SimpleEQ

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Source/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
